--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@formspree/react": "^2.5.1",
+    "@mui/material": "^5.14.6",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,9 +22,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-gallery": "^1.3.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "prettier": "3.0.2"
   }
 }
