--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.3.0",
+    "svix": "^1.11.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
