--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formspree/react": "^2.5.1",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -27,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.3.0",
+    "react-redux": "^8.1.2",
     "svix": "^1.11.0",
     "typescript": "5.2.2"
   },
