--- a/package.json
+++ b/package.json
@@ -21,19 +21,21 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.2",
     "graphql-request": "^6.1.0",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
     "svix": "^1.11.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.0",
+    "@types/redux-persist": "^4.3.1",
     "prettier": "3.0.2"
   }
 }
