--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
+    "@clerk/themes": "^1.7.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@formspree/react": "^2.5.1",
@@ -29,6 +30,7 @@
     "react-icons": "^4.10.1",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "svix": "^1.11.0",
     "typescript": "5.2.2"
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.0",
     "@types/redux-persist": "^4.3.1",
+    "encoding": "^0.1.13",
     "prettier": "3.0.2"
   }
 }
