--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.6",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^1.54.2",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "^13.5.2",
     "graphql-request": "^6.1.0",
-    "next": "^13.5.2",
+    "next": "^13.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -32,8 +33,10 @@
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "stripe": "^12.5.0",
     "svix": "^1.11.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-shopping-cart": "^3.1.8"
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.0",
