--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.1.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint-config-next": "^13.5.4",
     "graphql-request": "^6.1.0",
-    "next": "^13.5.3",
+    "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -35,8 +36,7 @@
     "redux-persist": "^6.0.0",
     "stripe": "^12.5.0",
     "svix": "^1.11.0",
-    "typescript": "5.2.2",
-    "use-shopping-cart": "^3.1.8"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@types/react-image-gallery": "^1.2.0",
