--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kalarric-lipestyles-web-app",
+  "name": "kalarric-lipestyles-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
